<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/alarmOrginTextId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmOrginText" />

            <TextView
                android:id="@+id/alarmOrginWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/alarmTransText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmTransText" />

            <EditText
                android:id="@+id/alarmEditTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <Button
                android:id="@+id/alarmCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:onClick="onClick"
                android:text="@string/alarmCheck" />

            <Button
                android:id="@+id/stopAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/alarmCheck"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:ellipsize="marquee"
                android:onClick="onClick"
                android:singleLine="true"
                android:text="@string/stopAlarm" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
